# rasterizer-rust

./: .gitignore  Cargo.toml  Cargo.toml.no  README.md  part_aa.rs  part_ab.rs  part_ac.rs  scene.toml  tile.diff  tmp.md
assets/: spot_triangulated.mtl
legacy/: .gitignore  README.md  all.rs  complex_config.toml  nahida_config.toml  part_aa.rs  part_ab.rs  part_ac.rs  tmp.md
legacy/src-legacy/core/: rasterizer.rs  renderer.rs  shadow_map.rs
legacy/src-legacy/geometry/: camera.rs  interpolation.rs  transform.rs
legacy/src-legacy/io/: mod.rs
legacy/src-legacy/material_system/: color.rs  light.rs  materials.rs  mod.rs  texture.rs
legacy/src-legacy/ui/: app.rs  mod.rs  render_ui.rs
legacy/src-legacy/utils/: mod.rs  model_utils.rs  render_utils.rs  save_utils.rs
src/: app.rs  core.rs  io.rs  lib.rs  main.rs  pipeline.rs  scene.rs
src-legacy/: core.rs  main.rs
src-legacy/core/: frame_buffer.rs
src-legacy/geometry/: culling.rs  mod.rs
src-legacy/io/: config_loader.rs  model_loader.rs  obj_loader.rs  render_settings.rs  simple_cli.rs
src-legacy/scene/: mod.rs  scene_object.rs  scene_utils.rs
src-legacy/ui/: animation.rs  core.rs  widgets.rs
src/core/: color.rs  framebuffer.rs  geometry.rs  math.rs  pipeline.rs  rasterizer.rs
src/core/math/: interpolation.rs  transform.rs
src/io/: config.rs  image.rs  obj_loader.rs
src/pipeline/: passes.rs  renderer.rs  shaders.rs
src/pipeline/shaders/: pbr.rs  phong.rs  shadow.rs  unlit.rs
src/scene/: camera.rs  context.rs  light.rs  loader.rs  material.rs  mesh.rs  model.rs  scene_object.rs  texture.rs  utils.rs
src/ui/: input.rs
