[package]
name = "rasterizer-rust"
version = "3.0.0"
edition = "2024"
authors = ["Rukkhadevata123 <rukkhadevata@foxmail.com>"]
description = "A high-performance, multi-threaded software rasterizer in Rust implementing PBR, shadow mapping, and an interactive GUI."
license = "MIT"
repository = "https://github.com/Rukkhadevata123/rasterizer-rust"
keywords = ["graphics", "rasterizer", "rendering", "software-renderer", "pbr", "shadow-mapping", "ssaa", "multithreaded", "rayon"]
categories = ["graphics", "rendering", "game-development", "visualization", "image-processing"]

[dependencies]
nalgebra = "0.34"
env_logger = "0.11"
log = "0.4"
image = "0.25"
tobj = "4"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
minifb = "0.28"

[[bin]]
name = "rasterizer"
path = "src/main.rs"
